solucion de problema de jquery

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css?v=2.1.7" type="text/css" media="screen" />
 		<script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js?v=2.1.7"></script>
 		<script type="text/javascript">
@@ -143,56 +143,56 @@
 				<div class="container container__portafolio">
 					<div class="portafolio__areas">
 						<div class="portafolio__divisor">
-							<a class="portafolio__text fancybox" rel="group" href="images/samurai.gif">
+							<a class="portafolio__text fancybox" rel="gallery" href="images/samurai.gif">
 								<h3 class="portafolio__subtitle">Samurai</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<img src="images/samurai.jpg" alt="Samurai" class="portafolio__img">
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox" rel="group" href="images/wolverine-big.jpg">
+							<a class="portafolio__text fancybox" rel="gallery" href="images/wolverine-big.jpg">
 								<h3 class="portafolio__subtitle">Wolverine</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<img src="images/wolverine.jpg" alt="Wolverine" class="portafolio__img">
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox" rel="group" href="images/leopardo-big.jpg">
+							<a class="portafolio__text fancybox" rel="gallery" href="images/leopardo-big.jpg">
 								<h3 class="portafolio__subtitle">Leopardo</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<img src="images/leopardo.jpg" alt="Leopardo" class="portafolio__img">
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox" rel="group" href="images/mochica-big.jpg">
+							<a class="portafolio__text fancybox" rel="gallery" href="images/mochica-big.jpg">
 								<h3 class="portafolio__subtitle">Mochica</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<img src="images/mochica.jpg" alt="Mochica" class="portafolio__img">
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox" rel="group" href="images/libro-ilustrado-big.jpg">
+							<a class="portafolio__text fancybox" rel="gallery" href="images/libro-ilustrado-big.jpg">
 								<h3 class="portafolio__subtitle">Libro Ilustrado</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<img src="images/libro-ilustrado.jpg" alt="Libro Ilustrado" class="portafolio__img">
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox" rel="group" href="images/revista-big.jpg">
+							<a class="portafolio__text fancybox" rel="gallery" href="images/revista-big.jpg">
 								<h3 class="portafolio__subtitle">Revista</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<img src="images/revista.jpg" alt="Revista" class="portafolio__img">
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox fancybox.iframe" rel="group" href="https://www.youtube.com/embed/hjIEdzYrjtI?autoplay=1">
+							<a class="portafolio__text fancybox fancybox.iframe" rel="gallery" href="https://www.youtube.com/embed/hjIEdzYrjtI?autoplay=1">
 								<h3 class="portafolio__subtitle">Oreo</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
 							<video loop autoplay src="video/oreo.mp4" class="portafolio__img"></video>
 						</div><!--
 						--><div class="portafolio__divisor">
-							<a class="portafolio__text fancybox fancybox.iframe" rel="group" href="https://www.youtube.com/embed/v8rN5GrZgW8?autoplay=1">
+							<a class="portafolio__text fancybox fancybox.iframe" rel="gallery" href="https://www.youtube.com/embed/v8rN5GrZgW8?autoplay=1">
 								<h3 class="portafolio__subtitle">Reel</h3>
 								<p class="portafolio__link">Ver más</p>
 							</a>
